@@ -1,3 +1,7 @@
+2005-08-30  Joerg Wunsch <j@uriah.heep.sax.de>
+
+	* usb_libusb.c: Consistently use unsigned char for buffers.
+
 2005-08-28  Joerg Wunsch <j@uriah.heep.sax.de>
 
 	* avrdude.conf.in: Add support for the ATtiny25/45/85.  Note that
